5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3812/executions/1594_1806.log
== SUBMITION (2019-03-23 16:48:24) 
-- CODE:
Pfrom math import*

n = float(input('digite n: '))

P = round((1 - ( factorial(365) / factorial(365 - n) )*(365**(-n)))*100),2)
print(P)

-- EXECUTION TIME:
0.126858
-- ERROR:
  File "/home/codebench/codes/1594/1806/main.py", line 1
    Pfrom math import*
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 16:48:26) 
-- CODE:
Pfrom math import*

n = float(input('digite n: '))

P = round((1 - ( factorial(365) / factorial(365 - n) )*(365**(-n)))*100),2)
print(P)

-- ERROR:
File "XXXX", line 1
    Pfrom math import*
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 16:48:40) 
-- CODE:
from math import*

n = float(input('digite n: '))

P = round((1 - ( factorial(365) / factorial(365 - n) )*(365**(-n)))*100),2)
print(P)

-- EXECUTION TIME:
0.151424
-- ERROR:
  File "/home/codebench/codes/1594/1806/main.py", line 5
    P = round((1 - ( factorial(365) / factorial(365 - n) )*(365**(-n)))*100),2)
                                                                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 16:48:42) 
-- CODE:
from math import*

n = float(input('digite n: '))

P = round((1 - ( factorial(365) / factorial(365 - n) )*(365**(-n)))*100),2)
print(P)

-- EXECUTION TIME:
0.118677
-- ERROR:
  File "/home/codebench/codes/1594/1806/main.py", line 5
    P = round((1 - ( factorial(365) / factorial(365 - n) )*(365**(-n)))*100),2)
                                                                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 16:48:42) 
-- CODE:
from math import*

n = float(input('digite n: '))

P = round((1 - ( factorial(365) / factorial(365 - n) )*(365**(-n)))*100),2)
print(P)

-- ERROR:
File "XXXX", line 5
    P = round((1 - ( factorial(365) / factorial(365 - n) )*(365**(-n)))*100),2)
                                                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 16:49:03) 
-- CODE:
from math import*

n = float(input('digite n: '))

P = round(((1 - ( factorial(365) / factorial(365 - n) )*(365**(-n)))*100),2)
print(P)

-- EXECUTION TIME:
0.215411
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
